# tiara-nal

./: CHANGELOG.md  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py
tiara/: main.py
tiara/src/: classification.py
tiara/training/: train_models.py
